# spotify-tui

./: Cargo.toml  Makefile
.github/workflows/: release.yml
src/handlers/: artist_albums.rs
src/ui/: mod.rs
