[package]
name = "spotify-tui"
version = "0.25.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
categories = ["command-line-utilities"]
documentation = "https://github.com/Rigellute/spotify-tui"
edition = "2021"
homepage = "https://github.com/Rigellute/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rigellute/spotify-tui"
description = "A terminal user interface for Spotify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
arboard = "1.2.0"
backtrace = "0.3.56"
clap = "2.33.3"
crossterm = "0.20"
dirs = "3.0.1"
rand = "0.8.3"
rspotify = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
unicode-width = "0.1.8"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"

[profile.release]
lto = true
opt-level = 2
strip = true

[patch.crates-io]
unicode-width = { git = "https://github.com/waltarix/unicode-width", tag = "v0.1.10-custom" }
